--- a/docs/01.v3/010.快速入门/040.快速开始.md
+++ b/docs/01.v3/010.快速入门/040.快速开始.md
@@ -49,16 +49,21 @@ npm i
 
 #### 启动方式一
 > ee-bin: v1.2.0
+
 > ee-core: v2.5.0
 
-新版本可同时启动 前端 & 主进程，也可以分开启动，优化开发体验。
+新版本可同时启动 前端 & 主进程，也可以分开启动。
 
-package.json
+electron业务代码暂不支持热更（修改代码后需重新启动），如果前端启动时间长，则建议分开启动。
+
+配置 `package.json`
 ```javascript
   "scripts": {
     "dev": "ee-bin dev",
     "dev-frontend": "ee-bin dev --serve=frontend",
     "dev-electron": "ee-bin dev --serve=electron",
+    "start": "ee-bin start",
+    "build-frontend": "ee-bin build",
   }
 ```
 
@@ -75,12 +80,25 @@ npm run dev-frontend
 npm run dev-electron
 ```
 
+- 构建前端资源。
+```bash
+npm run build-frontend
+```
+
 ::: tip
 注：如果启动的前端服务不是：http://localhost:8080/  请先配置：[config/bin.js](/pages/c492f8/) 文件中的 `frontend` 对象
 :::
 
 #### 启动方式二
-旧版本使用，功能受限，请升级ee-bin
+旧版本使用，功能受限，请升级`ee-bin`和`ee-core`，并添加 `./electron/config/bin.js` 配置文件。
+
+package.json
+```javascript
+  "scripts": {
+    "dev": "electron . --env=local",
+    "start": "electron . ",
+  }
+```
 
 1. 启动前端
 ```bash
