--- a/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
@@ -1,14 +1,15 @@
 ---
-title: 开发配置
+title: 开发
 date: 2023-09-07 11:01:56
 permalink: /pages/c492f8/
 ---
 
 ### bin.js
 > ee-bin: v1.2.0
+
 > ee-core: v2.5.0
 
-开发环境中，使用的各种命令及工具配置。
+开发环境使用的各种命令及工具配置。
 
 #### 文件位置
 ```bash
@@ -28,8 +29,8 @@ module.exports = {
    * 开发模式服务配置
    */
   dev: {
-    // frontend：前端服务；
-    // 说明：进入 frontend 目录，执行 npm run dev
+    // frontend：前端服务
+    // 说明：该配置的意思是，进入 frontend 目录，执行 npm run dev
     // 运行后的服务为 http://localhost:8080 
     // 如果 protocol 属性为 'file://' 那么不会执行命令，项目直接加载 indexPath 对应的文件。
     frontend: {
@@ -41,8 +42,8 @@ module.exports = {
       port: 8080,              // port
       indexPath: 'index.html'  // 'file://'协议时有效，入口文件
     },
-    // electron：主进程服务；
-    // 说明：在 根目录，执行 electron . --env=local
+    // electron：主进程服务
+    // 说明：该配置的意思是，在根目录，执行 electron . --env=local
     electron: {
       directory: './',
       cmd: 'electron',
@@ -53,7 +54,7 @@ module.exports = {
   /**
    * 前端构建
    * 命令：ee-bin build
-   * 说明：进入 frontend 目录，执行 npm run build
+   * 说明：该配置的意思是，进入 frontend 目录，执行 npm run build
    */
   build: {
     directory: './frontend',
@@ -74,7 +75,7 @@ module.exports = {
   /**
    * 预发布模式（prod）
    * 命令：ee-bin start
-   * 说明：执行命令 electron . --env=prod
+   * 说明：该配置的意思是，在根目录，执行 electron . --env=prod
    */
   start: {
     directory: './',
@@ -101,7 +102,7 @@ module.exports = {
       '!electron/config/builder.json',
       '!electron/config/bin.json',
     ],
-    // 需要加密的文件后缀，暂时只支持js，后续待扩展
+    // 需要加密的文件后缀，暂时只支持js
     fileExt: ['.js'],
     // 混淆加密配置
     confusionOptions: {
