--- a/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
+++ b/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
@@ -79,14 +79,21 @@ npm run dev-frontend
 npm run dev-electron
 ```
 
-- 构建前端资源。
-```bash
-npm run build-frontend
-```
-
 ::: tip
 注：如果启动的前端服务不是：http://localhost:8080/  请先配置：[config/bin.js](/pages/c492f8/) 文件中的 `frontend` 对象
 :::
+
+#### 构建前端资源
+> ee-bin: v1.2.0
+
+`ee-bin: v1.2.0` 增加了命令 `ee-bin build` 生成的资源，process对象包含renderer进程信息。
+
+如果直接进入 frontend 目录，去执行 `npm run build` 时 (没有经过ee-bin)，process对象不包含renderer进程信息。
+
+```bash
+# ee-bin build
+npm run build-frontend
+```
 
 ### 开发环境（旧）
 旧版本使用，功能受限，请升级`ee-bin`和`ee-core`，参照上面文档。
