--- a/docs/01.v3/030.生成软件/010.构建.md
+++ b/docs/01.v3/030.生成软件/010.构建.md
@@ -12,9 +12,11 @@ article: false
 - 如果使用 **bytecode加密**，window区分32和64位，无法兼容运行；没有使用bytecode则忽略。
 
 ###  第一步：移动前端资源文件
+
+构建前端资源，查看教程：[**前端模块**](/pages/a75f3c/)
 ```bash
 # 操作如下
-1：构建资源，如vue前端项目中npm run build
+1：构建前端资源
 
 2：根目录：npm run rd
 
