--- a/docs/01.v3/010.快速入门/040.快速开始.md
+++ b/docs/01.v3/010.快速入门/040.快速开始.md
@@ -56,6 +56,8 @@ npm i
 
 electron业务代码暂不支持热更（修改代码后需重新启动），如果前端启动时间长，则建议分开启动。
 
+第一次启动时，窗口弹窗稍慢，请耐心等待
+
 配置 `package.json`
 ```javascript
   "scripts": {
