--- a/docs/01.v3/020.基础功能/040.通信/010.通信介绍.md
+++ b/docs/01.v3/020.基础功能/040.通信/010.通信介绍.md
@@ -24,7 +24,9 @@ const ipcApiRoute = {
 
 # 发送请求
 # 该请求会访问 controller/example.js文件的hello函数
-this.$ipc.invoke(ipcApiRoute.hello, {name:'张三'}).then(r => {
+import { ipc } from '@/utils/ipcRenderer';
+
+ipc.invoke(ipcApiRoute.hello, {name:'张三'}).then(r => {
 	// r为返回的数据
   conson.log(r);
 })
@@ -38,10 +40,10 @@ const ipcApiRoute = {
 }
 
 // 避免重复监听，或者将 $ipc.on() 功能写到一个统一的地方，只加载一次
-this.$ipc.removeAllListeners(ipcApiRoute.ipcSendMsg);
+ipc.removeAllListeners(ipcApiRoute.ipcSendMsg);
 
 // 监听，接收 服务端 event.reply()发送的数据
-this.$ipc.on(ipcApiRoute.ipcSendMsg, (event, result) => {
+ipc.on(ipcApiRoute.ipcSendMsg, (event, result) => {
     console.log('[ipcRenderer] [ipcSendMsg] result:', result);
 
     self.messageString = result;
@@ -50,7 +52,7 @@ this.$ipc.on(ipcApiRoute.ipcSendMsg, (event, result) => {
 })
 
 // 发送请求到服务端
-this.$ipc.send(ipcApiRoute.ipcSendMsg, '参数')
+ipc.send(ipcApiRoute.ipcSendMsg, '参数')
 ```
 
 ### 预加载模块通信
