--- a/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
@@ -15,6 +15,7 @@ permalink: /pages/c492f8/
 ```bash
 ./electron/config/bin.js
 ```
+源码：[bin.js](https://github.com/dromara/electron-egg/blob/master/electron/config/bin.js)
 
 #### 配置说明
 ```javascript
