--- a/docs/04.其它/010.案例.md
+++ b/docs/04.其它/010.案例.md
@@ -7,7 +7,9 @@ article: false
 
 # 案例展示
 
-如果你想展示项目，请联系我（qq：530353222）
+`electron-egg` 框架已经广泛应用于记账、政务、企业、医疗、学校、股票交易、ERP、娱乐、视频等领域客户端，请放心使用！
+
+桌面软件已进入 to B 时代，使用框架的大部分客户都是企业、政务内部使用，不方便提供图片展示；如果你想展示项目，请联系我（qq：530353222）
 
 ###  Alex-Wallpaper
 ![aw-3.jpg](https://img01.kaka996.com/ee/aw-3.png)
