--- a/docs/01.v3/020.基础功能/018.服务层.md
+++ b/docs/01.v3/020.基础功能/018.服务层.md
@@ -26,7 +26,7 @@ class ExampleService extends Service {
   /**
    * test
    */
-  async test (args) {
+  async test (args, event) {
     let obj = {
       status:'ok',
       params: args
@@ -34,6 +34,15 @@ class ExampleService extends Service {
 
     // 调用其它service
     Services.get('framework').test('egg');
+
+    // 主动向前端发请求
+    // channel 前端ipc.on()，监听的路由
+    const channel = "controller.example.something"
+    // controller 传入 event
+    // IpcMainInvokeEvent
+    event.reply(channel, {age:21})
+    // IpcMainEvent
+    event.sender.send(`${channel}`, data)
 
     return obj;
   }
