--- a/docs/01.v3/020.基础功能/018.服务层.md
+++ b/docs/01.v3/020.基础功能/018.服务层.md
@@ -42,7 +42,7 @@ class ExampleService extends Service {
     // IpcMainInvokeEvent
     event.reply(channel, {age:21})
     // IpcMainEvent
-    event.sender.send(`${channel}`, data)
+    event.sender.send(`${channel}`, {age:21})
 
     return obj;
   }
