--- a/docs/01.v3/050.其它/030.更新记录.md
+++ b/docs/01.v3/050.其它/030.更新记录.md
@@ -6,6 +6,15 @@ article: false
 ---
 
 # 更新记录
+### 3.8.0
+1. 【增加】新增 ee-bin exec 命令，支持自定义命令。
+2. 【增加】新增 ee-core jobs 配置，打开/关闭 messageLog。
+3. 【优化】优化 ee-core jsondb 异常处理。
+4. 【优化】优化 ee-core controller/services 异常捕获并写log。
+5. 【优化】优化 ee-bin loading 动画居中。
+6. 【优化】优化 electron-egg logo，优化mac图标，优化Linux系统图标。
+7. 【优化】优化 electron-egg loading 动画居中。
+
 ### 3.7.0
 1. 【增加】新增 config/bin.js配置文件，统一处理 ee-bin 功能配置项。
 2. 【增加】新增 ee-bin dev 命令，同时启动 frontend electron 服务。
