--- a/docs/01.v3/050.其它/030.更新记录.md
+++ b/docs/01.v3/050.其它/030.更新记录.md
@@ -14,6 +14,7 @@ article: false
 5. 【优化】优化 ee-bin loading 动画居中。
 6. 【优化】优化 electron-egg logo，优化mac图标，优化Linux系统图标。
 7. 【优化】优化 electron-egg loading 动画居中。
+8. 【升级】升级ee-core v2.6.0，升级ee-bin v1.3.0
 
 ### 3.7.0
 1. 【增加】新增 config/bin.js配置文件，统一处理 ee-bin 功能配置项。
