--- a/docs/04.其它/011.交流.md
+++ b/docs/04.其它/011.交流.md
@@ -19,7 +19,11 @@ article: false
 
 <img style="zoom:20%;" src="https://img01.kaka996.com/ee/wx-1.jpg" >
 
-qq群已满，请加微信群
+微信群
+- 群2：Dromara-EE框架-2群
+- 群1：Dromara-EE框架-1群
+
+qq群（已满，请加微信群）
 - qq群2：495444940 (已满)
 - qq群1：735532437 (已满)
 
