--- a/docs/06.支持/018.个人赞助.md
+++ b/docs/06.支持/018.个人赞助.md
@@ -37,6 +37,12 @@ article: false
 ##  赞助者列表
 | 日期         | 渠道    | 金额    | 昵称         | 备注             |
 |------------|-------|-------|------------|----------------|
+| 2023-11-14 |  微信 | 30    | 不如干饭 |    感谢您的开源项目！    |
+| 2023-10-05 |  微信 | 30    | 小肥羊 |    感谢您的开源项目！    |
+| 2023-09-05 |  微信 | 10    | deigo |    感谢您的开源项目！    |
+| 2023-08-18 |  微信 | 10    | lg |    感谢您的开源项目！    |
+| 2023-08-10 |  微信 | 10    | 云 |    感谢您的开源项目！    |
+| 2023-06-23 |  微信 | 20    | cc |    感谢您的开源项目！    |
 | 2023-04-03 |  gitee | 10    | 吴嘉杰 |    感谢您的开源项目！    |
 | 2023-04-02 |  gitee | 10    | 冯渊 |    感谢您的开源项目！    |
 | 2023-03-30 |  gitee | 50    | yundmb |    感谢您的开源项目！    |
