--- a/docs/01.v3/010.快速入门/040.快速开始.md
+++ b/docs/01.v3/010.快速入门/040.快速开始.md
@@ -26,15 +26,20 @@ article: false
 - sqlite数据库
 
 ### 核心包
+`ee-bin` 提供命令行工具，开发环境使用。 
+
 `ee-core` 提供框架核心功能。
 
-`ee-bin` 提供命令行工具，开发环境使用。        
+`ee-go` `(可选)` 提供 `go` 语言支持。       
 
 ### 功能划分
 ####  软件界面
 `frontend` 目录，开发软件界面；支持任意前端技术，如`vue`、`react`、`angular`、`html`、`vite` 等
+
 ####  业务逻辑
 `electron` 目录，开发业务逻辑；常规业务逻辑、调用操作系统api、访问远程服务器api等
+
+`go` 目录(可选)，开发业务逻辑；利用go的跨平台、高性能，大幅提升软件体验。
 
 ### 开发者模式
 #### 安装依赖
