--- a/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
@@ -53,7 +53,39 @@ module.exports = {
   },
 
   /**
-   * 前端构建
+   * 构建
+   * 命令：ee-bin build
+   * 说明：用来构建前端、go、或者自定义命令
+   * 举例1：ee-bin build --cmds=frontend (构建 前端 dist资源)
+   * 举例2：ee-bin build --cmds=go_build_w (构建 go windows平台程序)
+   * 举例3：ee-bin build --cmds=go_build_m (构建 go macos平台程序)
+   * 举例4：ee-bin build --cmds=go_build_l (构建 go linux平台程序)
+   */
+  build: {
+    frontend: {
+      directory: './frontend',
+      cmd: 'npm',
+      args: ['run', 'build'],
+    },
+    go_build_w: {
+      directory: './go',
+      cmd: 'go',
+      args: ['build', '-o', '../build/extraResources/goapp.exe'],
+    },
+    go_build_m: {
+      directory: './go',
+      cmd: 'go',
+      args: ['build', '-o', '../build/extraResources/goapp'],
+    },
+    go_build_l: {
+      directory: './go',
+      cmd: 'go',
+      args: ['build', '-o', '../build/extraResources/goapp'],
+    }
+  },
+
+  /**
+   * 前端构建（废弃，修改为多维对象）
    * 命令：ee-bin build
    * 说明：该配置的意思是，进入 frontend 目录，执行 npm run build
    */
