--- a/docs/01.v3/020.基础功能/012.生命周期.md
+++ b/docs/01.v3/020.基础功能/012.生命周期.md
@@ -9,7 +9,7 @@ article: false
 项目入口文件及生命周期
 
 ::: tip
-v3.3.0 将 main.js中业务代码，放到了 **./electron/index.js** 里面（稍作修改）。
+v3.3.0 将 main.js中业务代码，放到了 **./electron/index.js** 里面。
 
 这样所有的业务代码都在 **./electron** 文件夹下，方便业务统一与全局代码加密。
 :::
