--- a/docs/01.v3/045.跨语言支持/010.go/01.介绍.md
+++ b/docs/01.v3/045.跨语言支持/010.go/01.介绍.md
@@ -2,7 +2,19 @@
 title: 介绍
 date: 2023-11-30 11:12:19
 article: false
+permalink: /pages/cf2ad4/
 ---
 
-###  为什么要支持go语言
+> ee-bin: v1.4.0
+> ee-core: v2.7.0
+
+`go` 凭借着简单、高效、跨平台等优势，迅速成为开发者最喜爱的语言之一。
+
+经调研/测试发现，它与`electron`技术完美匹配，因此 `electron-egg` 深度集成了go，并通过 `ee-go` mod ,
+
+让开发者非常方便的进程业务开发，而无需关注复杂的系统环境。
+
+如果您将核心业务用go来开发，那么您将发现，它将拥有堪比qt一样流畅运行的桌面软件。
+
+
 
