--- a/docs/01.v3/045.跨语言支持/010.go/01.介绍.md
+++ b/docs/01.v3/045.跨语言支持/010.go/01.介绍.md
@@ -10,11 +10,44 @@ permalink: /pages/cf2ad4/
 
 `go` 凭借着简单、高效、跨平台等优势，迅速成为开发者最喜爱的语言之一。
 
-经调研/测试发现，它与`electron`技术完美匹配，因此 `electron-egg` 深度集成了go，并通过 `ee-go` mod ,
+`electron-egg` 深度集成了go，并通过 `ee-go` mod，让开发者非常方便的进程业务开发，而无需关注复杂的系统环境。
 
-让开发者非常方便的进程业务开发，而无需关注复杂的系统环境。
+如果您将核心业务用go来开发，那么它将拥有堪比`c#`、`qt`一样流畅的使用体验。
 
-如果您将核心业务用go来开发，那么您将发现，它将拥有堪比qt一样流畅运行的桌面软件。
+
+### 准备
+- 推荐 go >= 1.20.4 
+
+### 如何运行
+1. 下载项目
+```bash
+# gitee
+git clone https://gitee.com/dromara/electron-egg.git
+
+# github
+git clone https://github.com/dromara/electron-egg.git
+```
+
+2. 检出 `demo-go` 分支并切换
+```bash
+git checkout -b demo-go remotes/origin/demo-go
+```
+
+3. 安装依赖并启动
+```bash
+# 进入go目录安装依赖
+cd ./go
+go mod tidy
+
+# 返回根目录启动
+cd ../
+npm run dev
+```
+
+
+
+
+
 
 
 
