--- a/docs/01.v3/045.跨语言支持/010.go/02.配置.md
+++ b/docs/01.v3/045.跨语言支持/010.go/02.配置.md
@@ -5,5 +5,60 @@ article: false
 permalink: /pages/9fd5ba/
 ---
 
-###  为什么要支持go语言
+配置分为3个部分
+
+### 一、go config
+位置
+```bash
+# 目录
+./go/config/
+
+# 说明
+config.default.json // 默认配置文件，开发环境和生产环境都会加载
+config.local.json   // 开发环境配置文件，追加和覆盖default配置文件
+config.prod.json    // 生产环境配置文件，追加和覆盖default配置文件
+```
+
+内容
+```javascript
+{
+    // 业务日志
+    "logger": {
+        // 是否输出位json格式
+        "output_json": false, 
+        // 日志等级 
+        "level":      "info",
+        // 名称
+		"filename":   "ee-go.log",
+        // 
+		"max_size":    1024,
+        // 
+		"max_age":     10
+    },
+    // 框架日志
+    "core_logger": {
+        "output_json": false,
+        "level":      "info",
+		"filename":   "ee-go-core.log",
+		"max_size":    1024,
+		"max_age":     10
+    },
+    // 
+    "http": {
+        "enable": true,
+        "port": 7073,
+        "network": false
+    },
+    // 
+    "static": {
+        "enable": true,
+        "package": "public/package.json",
+        "config": "public/config",
+        "dist": "public/dist",
+        "html": "public/html",
+        "ssl": "public/ssl"
+    }
+}
+```
+
 
