go 介绍与配置

--- a/docs/01.v3/045.跨语言支持/010.go/01.介绍.md
+++ b/docs/01.v3/045.跨语言支持/010.go/01.介绍.md
@@ -28,21 +28,43 @@ git clone https://gitee.com/dromara/electron-egg.git
 git clone https://github.com/dromara/electron-egg.git
 ```
 
-2. 检出 `demo-go` 分支并切换
+2. 切换 `demo-go` 分支
 ```bash
 git checkout -b demo-go remotes/origin/demo-go
 ```
 
-3. 安装依赖并启动
+3. 安装 前端、electron、go 依赖
 ```bash
-# 进入go目录安装依赖
-cd ./go
-go mod tidy
+# 根目录安装electron依赖
+npm i
 
-# 返回根目录启动
-cd ../
+# 进入前端目录安装依赖
+cd ./frontend 
+npm i
+
+# 进入go目录安装依赖
+cd ../go
+go mod tidy
+```
+
+4. 运行
+启动方式一
+```bash
+# 同时启动3个服务
 npm run dev
 ```
+
+启动方式二
+```bash
+# 分开启动3个服务
+npm run dev-frontend
+
+npm run dev-go
+
+npm run dev-electron
+```
+
+同时启动 前端 & 主进程，也可以分开启动
 
 
 
