--- a/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
@@ -49,7 +49,8 @@ module.exports = {
       directory: './',
       cmd: 'electron',
       args: ['.', '--env=local'],
-      loadingPage: '/public/html/loading.html', // [ee-bin v1.4.0] 如果前端启动时间过长，可先加载一个loading页
+      // ee-bin@v1.4.0 如果前端启动时间过长，可先加载一个loading页
+      loadingPage: '/public/html/loading.html', 
     }
     // (可选) go：跨语言支持
     // ee-bin@v1.4.0
@@ -83,17 +84,17 @@ module.exports = {
     go_build_w: {
       directory: './go',
       cmd: 'go',
-      args: ['build', '-o', '../build/extraResources/goapp.exe'],
+      args: ['build', '-o=../build/extraResources/goapp.exe'],
     },
     go_build_m: {
       directory: './go',
       cmd: 'go',
-      args: ['build', '-o', '../build/extraResources/goapp'],
+      args: ['build', '-o=../build/extraResources/goapp'],
     },
     go_build_l: {
       directory: './go',
       cmd: 'go',
-      args: ['build', '-o', '../build/extraResources/goapp'],
+      args: ['build', '-o=../build/extraResources/goapp'],
     }
   },
 
