--- a/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
+++ b/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
@@ -83,17 +83,38 @@ npm run dev-electron
 注：如果启动的前端服务不是：http://localhost:8080/  请先配置：[config/bin.js](/pages/c492f8/) 文件中的 `frontend` 对象
 :::
 
-#### 构建前端资源
+#### 构建前端资源并移动
 > ee-bin: v1.2.0
+> ee-bin: v1.4.0 增加move命令
 
-`ee-bin: v1.2.0` 增加了命令 `ee-bin build` 生成的资源，process对象包含renderer进程信息。
+生产环境最终加载的是 `/public/dist` 资源，因此需要把 `./frontend/dist` 复制过去。
 
-如果直接进入 frontend 目录，去执行 `npm run build` 时 (没有经过ee-bin)，process对象不包含renderer进程信息。
+frontend目录代码不会被打包，防止源码泄露。
 
-```bash
-# ee-bin build
-npm run build-frontend
+> 推荐使用合并后的命令
+
+配置 `package.json`
+```javascript
+"scripts": {
+  // ee-bin: v1.4.0
+  // 构建 并 移动
+  "build-frontend": "ee-bin build --cmds=frontend && ee-bin move --flag=frontend_dist",
+  // 构建
+  "build-frontend": "ee-bin build --cmds=frontend",
+  // 移动
+  "rd": "ee-bin move --flag=frontend_dist",
+
+  // ee-bin: v1.2.0
+  // 构建 并 移动
+  "build-frontend": "ee-bin build && ee-bin rd",
+  // 构建
+  "build-frontend": "ee-bin build",
+  // 移动
+  "rd": "ee-bin rd",
+}
 ```
+
+注：如果直接进入 frontend 目录，去执行 `npm run build` 时 (没有经过ee-bin)，process对象不包含renderer进程信息。
 
 ### 开发环境（旧）
 旧版本使用，功能受限，请升级`ee-bin`和`ee-core`，参照上面文档。
