--- a/docs/01.v3/045.跨语言支持/010.go/01.开始.md
+++ b/docs/01.v3/045.跨语言支持/010.go/01.开始.md
@@ -1,5 +1,5 @@
 ---
-title: 介绍
+title: 开始
 date: 2023-11-30 11:12:19
 article: false
 permalink: /pages/cf2ad4/
@@ -14,6 +14,7 @@ permalink: /pages/cf2ad4/
 
 如果您将核心业务用go来开发，那么它将拥有堪比`c#`、`qt`一样流畅的使用体验。
 
+`ee-go` 模块当前处于初级阶段，后续将持续增加功能。
 
 ### 准备
 - 推荐 go >= 1.20.4 
@@ -28,9 +29,9 @@ git clone https://gitee.com/dromara/electron-egg.git
 git clone https://github.com/dromara/electron-egg.git
 ```
 
-2. 切换 `demo-go` 分支
+2. 切换 `demo` 分支
 ```bash
-git checkout -b demo-go remotes/origin/demo-go
+git checkout -b demo-go remotes/origin/demo
 ```
 
 3. 安装 前端、electron、go 依赖
@@ -48,6 +49,31 @@ go mod tidy
 ```
 
 4. 运行
+
+打开配置
+```javascript
+// bin开发配置
+// ./electron/config/bin.js
+dev: {
+    go: {
+        directory: './go',
+        cmd: 'go',
+        args: ['run', './main.go', '--env=dev','--basedir=../', '--port=7073'],
+    },
+},
+
+// electron基础配置
+// ./electron/config/config.default.js
+config.cross = {
+    go: {
+        enable: true,
+        name: 'goapp',
+        args: ['--port=7073'],
+        appExit: true,
+    }
+}; 
+```
+
 启动方式一
 ```bash
 # 同时启动3个服务
@@ -63,8 +89,6 @@ npm run dev-go
 
 npm run dev-electron
 ```
-
-同时启动 前端 & 主进程，也可以分开启动
 
 
 
