--- a/docs/01.v3/045.跨语言支持/010.go/04.构建.md
+++ b/docs/01.v3/045.跨语言支持/010.go/04.构建.md
@@ -5,5 +5,67 @@ article: false
 permalink: /pages/589f74/
 ---
 
-###  为什么要支持go语言
+当你开发完成之后，需要构建相应的资源或程序，并通过预览模式（未打包的prod环境），检查你的程序是否运行正常。
+
+### 构建
+#### 静态资源
+1. `./public` 目录，electron 生产环境使用。
+```bash
+# 前端资源
+./public/dist 
+# 一些页面
+./public/html 
+# 一些图片
+./public/images 
+# ssl证书
+./public/ssl 
+```
+
+2. `./go/public` 目录，由 `move` 命令生成；go 生产环境使用，会打包进程go的可执行程序中。
+```bash
+# 程序基础信息
+./go/public/package.json 
+# 配置
+./go/public/config
+
+./go/public/dist 
+./go/public/html 
+./go/public/images 
+./go/public/ssl 
+```
+
+#### 生成 go 程序
+1. 先生成前端资源并移动，[**查看教程**](/pages/a75f3c/)中，`构建前端资源并移动` 部分。
+
+2. build 对应操作系统的程序。
+
+配置 `package.json`
+```javascript
+  "scripts": {
+    // 构建前端资源 并 移动
+    "build-frontend": "ee-bin build --cmds=frontend && ee-bin move --flag=frontend_dist",
+    // 构建 windows 平台程序
+    "build-go-w": "ee-bin build --cmds=go_build_w",
+    // 构建 macOS 平台程序
+    "build-go-m": "ee-bin build --cmds=go_build_m",
+    // 构建 linux 平台程序
+    "build-go-l": "ee-bin build --cmds=go_build_l",
+  }
+```
+
+3. 程序位置 `./build/extraResources/goapp`
+
+#### 预发布模式
+测试一下功能是否正常（当前环境变量为：prod）
+```bash
+npm run start 
+```
+
+#### 生成桌面软件
+请参见：[**生成软件**](/pages/ad838d/)
+
+
+
+
+
 
