--- a/docs/01.v3/045.跨语言支持/010.go/03.开发.md
+++ b/docs/01.v3/045.跨语言支持/010.go/03.开发.md
@@ -5,5 +5,64 @@ article: false
 permalink: /pages/c32d4e/
 ---
 
-###  为什么要支持go语言
+如果使用go，那么框架可分为3个部分。
+
+- 前端UI
+- electron主进程
+- go业务进程
+
+### 概念
+#### 前端UI
+负责软件界面展示和效果，你可以使用任意前端技术，请参见文档：[**前端模块**](/pages/a75f3c/)
+
+#### electron
+涉及操作系统功能的业务，例如 调用操作系统api、打开文件夹、系统弹窗、等等；请参见文档：[**基础功能**](/pages/ee9aed/) 部分
+
+#### go
+利用go来编写核心业务。
+
+### 目录结构
+```
+project
+├── ...
+├── go 业务目录
+    ├── api 业务层
+    ├── config 配置
+    ├── public 生产环境使用的静态资源，由move命令生成
+    ├── config 配置
+    ├── router 路由
+    ├── main.go    
+```
+
+### 开发模式
+配置 `package.json`
+```javascript
+  "scripts": {
+    "dev": "ee-bin dev",
+    "dev-frontend": "ee-bin dev --serve=frontend",
+    "dev-electron": "ee-bin dev --serve=electron",
+    "dev-go": "ee-bin dev --serve=go",
+  }
+```
+
+#### 方式一
+同时启动 frontend (UI) 、electron、go 三个服务。
+
+注：由于 electron 、go 代码热加载体验不好，推荐使用`方式二`。
+```bash
+npm run dev
+```
+
+#### 方式二（推荐）
+分开启动，每次 electron、go代码更新后，只需要重新运行对应服务的命令。
+```bash
+# 打开三个终端
+npm run dev-frontend
+
+npm run dev-go
+
+npm run dev-electron
+```
+
+
 
