--- a/docs/01.v3/045.跨语言支持/010.go/08.数据.md
+++ b/docs/01.v3/045.跨语言支持/010.go/08.数据.md
@@ -5,5 +5,38 @@ article: false
 permalink: /pages/7d9334/
 ---
 
-###  为什么要支持go语言
+用来存放用户数据，目前提供定义好的数据存放目录，未来将集成sqlite（开发中...） 
+
+### 使用方法
+
+```go
+import (
+	"github.com/wallace5303/ee-go/eruntime"
+)
+
+// 配置文件目录，可存放一些基础配置数据
+eruntime.UserHomeConfDir()
+// 程序工作目录，开发者可以自定义使用，默认创建了 data、logs 两个目录
+eruntime.WorkDir()
+// 程序数据目录，是WorkDir的子目录
+eruntime.DataDir()
+```
+
+### 数据位置
+###  打包前：项目根目录
+```
+./data
+```
+###  打包后：用户目录
+注：与electron数据目录有所不同
+```bash
+# windows (例子)
+C:\Users\用户名\Documents\软件名(如：ee)\data
+
+# macOS (例子)
+Users/用户名/软件名(如：ee)/data
+
+# Linux (例子)
+$XDG_CONFIG_HOME or ~/软件名(如：ee)/data
+```
 
