--- a/docs/01.v3/045.跨语言支持/010.go/10.路由.md
+++ b/docs/01.v3/045.跨语言支持/010.go/10.路由.md
@@ -2,9 +2,10 @@
 title: 路由
 date: 2023-11-30 11:12:19
 article: false
+permalink: /pages/3736ee/
 ---
 
-目前框架只提供了http通信，可以让前端/electron进程与之通信；其它通信方式正在开发中...
+目前框架只提供了http通信，可以让`前端` `electron进程`与之通信；其它通信方式正在开发中...
 
 ### router
 定义http路由与方法绑定。
