--- a/docs/01.v3/045.跨语言支持/010.go/04.构建.md
+++ b/docs/01.v3/045.跨语言支持/010.go/04.构建.md
@@ -35,23 +35,34 @@ permalink: /pages/589f74/
 ```
 
 #### 生成 go 程序
-1. 先生成前端资源并移动，[**查看教程**](/pages/a75f3c/)中，`构建前端资源并移动` 部分。
+1. 首先生成前端资源并移动，[**查看教程**](/pages/a75f3c/)中，`构建前端资源并移动` 部分。
 
-2. build 对应操作系统的程序。
+2. 把静态资源嵌入到go 并 构建程序。
 
 配置 `package.json`
 ```javascript
   "scripts": {
-    // 构建前端资源 并 移动
-    "build-frontend": "ee-bin build --cmds=frontend && ee-bin move --flag=frontend_dist",
     // 构建 windows 平台程序
-    "build-go-w": "ee-bin build --cmds=go_build_w",
+    "build-go-w": "ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_build_w",
     // 构建 macOS 平台程序
-    "build-go-m": "ee-bin build --cmds=go_build_m",
+    "build-go-m": "ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_build_m",
     // 构建 linux 平台程序
-    "build-go-l": "ee-bin build --cmds=go_build_l",
+    "build-go-l": "ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_build_l",
   }
 ```
+
+举例说明：
+```bash
+npm run build-go-w 
+```
+
+该命令执行 配置中的:
+```
+"ee-bin move --flag=go_static,go_config,go_package,go_images && ee-bin build --cmds=go_build_w"
+```
+它包含两个命令：
+- `ee-bin move` 把 `public/`中的资源，移动到 `./go/public/`，它会被嵌入go的可执行程序中。
+- `ee-bin build` 用来生产go的可执行程序。
 
 3. 程序位置 `./build/extraResources/goapp`
 
