--- a/docs/01.v3/045.跨语言支持/010.go/08.数据.md
+++ b/docs/01.v3/045.跨语言支持/010.go/08.数据.md
@@ -5,7 +5,9 @@ article: false
 permalink: /pages/7d9334/
 ---
 
-用来存放用户数据，目前提供定义好的数据存放目录，未来将集成sqlite（开发中...） 
+用来存放用户数据，目前提供定义好的数据存放目录。
+
+将集成sqlite存储（开发中...） 
 
 ### 使用方法
 
@@ -14,7 +16,7 @@ import (
 	"github.com/wallace5303/ee-go/eruntime"
 )
 
-// 配置文件目录，可存放一些基础配置数据
+// 程序的配置数据目录，开发者可以自定义使用，存放一些基础配置数据
 eruntime.UserHomeConfDir()
 // 程序工作目录，开发者可以自定义使用，默认创建了 data、logs 两个目录
 eruntime.WorkDir()
