--- a/docs/01.v3/050.更新记录.md
+++ b/docs/01.v3/050.更新记录.md
@@ -6,6 +6,18 @@ article: false
 ---
 
 # 更新记录
+### 3.9.0 
+**【重大更新】**
+1. 【增加】新增 ee-go 模块，支持go语言，以及众多功能。
+2. 【增加】新增 ee-bin dev for go。
+3. 【增加】新增 ee-bin dev 配置electron.loadingPage。
+4. 【增加】新增 ee-core cross模块，支持跨语言服务。
+5. 【增加】新增 ee-core 生产环境配置 loadingPage。
+6. 【优化】优化 ee-bin dev --serve 支持自定义命令。
+7. 【优化】优化 ee-bin exec --cmds 支持自定义命令。
+8. 【优化】优化 ee-bin build --cmds 支持自定义命令。
+9. 【升级】升级ee-core v2.7.0，升级ee-bin v1.4.0
+
 ### 3.8.0
 1. 【增加】新增 ee-bin exec 命令，支持自定义命令。
 2. 【增加】新增 ee-core jobs 配置，打开/关闭 messageLog。
