--- a/docs/01.v3/020.基础功能/040.通信/010.通信介绍.md
+++ b/docs/01.v3/020.基础功能/040.通信/010.通信介绍.md
@@ -167,10 +167,14 @@ config.httpServer = {
 - onFileBegin {Function} 文件开始时的特殊回调。改函数将通过 formidable执行，它可以用于在将文件保存到磁盘之前重命名文件。
 ### 使用方法
 ```bash
-# 前端，项目中有demo
+# 前端，项目中有demo。
 
 # 终端命令，如
 curl http://127.0.0.1:7071/controller/example/doHttpRequest?id=pictures
+# 路由中的controller可以去掉
+curl http://127.0.0.1:7071/example/doHttpRequest?id=pictures
+# 控制器中加一层api目录
+curl http://127.0.0.1:7071/api/test/hello
 
 # 浏览器
 http://127.0.0.1:7071/controller/example/doHttpRequest?id=pictures
