--- a/docs/03.api/003.ee-core/085.ps.md
+++ b/docs/03.api/003.ee-core/085.ps.md
@@ -43,6 +43,9 @@ const Ps = require('ee-core/ps');
 ### processType()
 当前进程类型：browser、renderer、child
 
+### appName()
+应用名称
+
 ### getHomeDir()
 获取Home路径，即项目根目录。
 
@@ -77,6 +80,9 @@ const Ps = require('ee-core/ps');
 
 ### getUserHomeDir()
 获取操作系统用户目录
+
+### getUserHomeConfigDir()
+获取用户配置数据目录，市面上大多数应用会选择此目录来存放应用的json数据。
 
 ### getMainPort()
 获取主进程端口
