--- a/docs/07.功能/01.介绍.md
+++ b/docs/07.功能/01.介绍.md
@@ -17,8 +17,8 @@ permalink: /pages/132909/
 **特效** ：提供一些软件特效的实现demo
 
 ### 分支说明
-- `master` 主分支
-- `demo` 功能示例分支，UI使用vue3 + vite4
+- `master` 主分支（当前v3）
+- `demo` 功能示例分支，UI 使用vue3 + vite4 (你可以使用任意前端技术)
 - `demo-vue2` 功能示例分支，UI使用vue2（不在维护）
 - `dev_v3` electron-egg v3版本开发分支
 - `master_v2` electron-egg v2版本主分支（不在维护）
