--- a/docs/01.v3/045.跨语言支持/010.go/02.配置.md
+++ b/docs/01.v3/045.跨语言支持/010.go/02.配置.md
@@ -16,14 +16,19 @@ permalink: /pages/9fd5ba/
 ./electron/config/bin.js
 ```
 
-请查看文档：[**bin.js**](/pages/c492f8/)中 go相关部分
-
-主要看
+请查看文档：[**bin.js**](/pages/c492f8/)中 go相关部分，主要看 dev、build、move
 
 ### 二、electron配置
-位置
-```bash
+生产环境，启用enable才会启动go程序
+```javascript
 ./electron/config/config.*.js
+
+config.cross = {
+  go: {
+    // 是否开启
+    enable: true,
+  }
+}; 
 ```
 
 请查看文档：[**config.*.js**](/pages/f7cbf9/)中 `cross` 部分
