--- a/docs/03.api/003.ee-core/085.ps.md
+++ b/docs/03.api/003.ee-core/085.ps.md
@@ -49,6 +49,8 @@ const Ps = require('ee-core/ps');
 ### getHomeDir()
 获取Home路径，即项目根目录。
 
+dev环境：项目根目录，prod环境：app.asar目录
+
 ### getLogDir()
 获取日志存储路径 
 
