--- a/docs/01.v3/070.优惠券.md
+++ b/docs/01.v3/070.优惠券.md
@@ -10,7 +10,11 @@ permalink: /pages/352d9e/
 ### 掘金社区小册子 - 5折优惠券
 **《Electron 应用开发实践指南》**
 
-扫图片中二维码，并填写优惠券码：`efJDNnAR`
+扫图片中二维码，并填写优惠券码：
+
+`bbr65nPk` 新的
+
+`efJDNnAR` 已发放完毕（100张）
 
 `注：`如果优惠券无效，则表示已被领取完毕。
 
