--- a/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
@@ -246,6 +246,7 @@ config.addons = {
     // 强制更新（运行软件时，检查新版本并后台下载安装）
     force: false,
   },
+  // 废弃，请参考跨语言服务
   javaServer: {
     enable: false,
     port: 18080,
