--- a/docs/01.v3/020.基础功能/030.插件/070.java服务插件.md
+++ b/docs/01.v3/020.基础功能/030.插件/070.java服务插件.md
@@ -9,6 +9,9 @@ article: false
 
 > ee-core: v2.0.3 版后，尽量使用模块化api，减少对this.app依赖
 
+### 废弃
+请使用`cross模块`，提供统一的API。
+
 ###  配置
 ```javascript
 // electron/config/config.default.js
