--- a/docs/01.v3/050.更新记录.md
+++ b/docs/01.v3/050.更新记录.md
@@ -6,8 +6,19 @@ article: false
 ---
 
 # 更新记录
+### 3.10.0 
+1. 【优化】优化 ee-core 模块，支持go、java等。
+2. 【增加】新增 ee-core cross模块API：run()\killAll()\kill(pid)\killByName(name)\getUrl(name)\getProcByName(name)\getProc(pid)getPids()。
+3. 【增加】新增 ee-core  cross模块进程对象，包含API：pid\name\port\config\child\emitter\kill()\getUrl()\getArgsObj()。
+4. 【增加】新增 go、java 功能使用demo。
+5. 【修复】修复 electron/index 缓存问题。
+6. 【修复】修复 jobs 日志写多了会卡死的问题。
+7. 【修复】修复 第三方使用model错乱问题。
+8. 【修改】修改 配置 默认开启gpu，修改默认协议为 file://。
+9. 【修改】修改 go开发环境配置。
+10. 【升级】升级ee-core v2.8.0。
+
 ### 3.9.0 
-**【重大更新】**
 1. 【增加】新增 ee-go 模块，支持go语言，以及众多功能。
 2. 【增加】新增 ee-bin dev for go。
 3. 【增加】新增 ee-bin dev 配置electron.loadingPage。
