--- a/docs/01.v3/045.跨语言支持/020.go/12.API.md
+++ b/docs/01.v3/045.跨语言支持/020.go/12.API.md
@@ -8,4 +8,6 @@ permalink: /pages/08e70d/
 ### 介绍
 更多功能，以api的方式提供。
 
-请查看文档：[**API**](/pages/b658b7/)
+`ee-go api`：[**文档**](/pages/74c87a/)
+
+`cross api`：[**文档**](/pages/b658b7/)
