--- a/docs/01.v3/045.跨语言支持/030.java/02.业务.md
+++ b/docs/01.v3/045.跨语言支持/030.java/02.业务.md
@@ -10,6 +10,9 @@ permalink: /pages/8934ea/
 ### 调用说明
 框架提供了统一的cross模块来实现跨语言支持。
 
+### Cross API
+请查看文档：[**API**](/pages/74c87a/)
+
 #### 创建服务
 ```javascript
   /**
