--- a/docs/01.v3/045.跨语言支持/030.java/01.开始.md
+++ b/docs/01.v3/045.跨语言支持/030.java/01.开始.md
@@ -9,7 +9,7 @@ permalink: /pages/c3bbcf/
 
 `java` 拥有庞大的生态、市场、开发者，该文档会介绍如何把java项目集成到桌面端。
 
-### 如何运行
+### 准备
 1. 下载项目
 ```bash
 # gitee
@@ -34,7 +34,16 @@ cd ./frontend
 npm i
 ```
 
-4. 运行
+### 下载demo所需资源
+1. `jre` 和 `jar`
+- 地址：[java-res.zip](https://github.com/wallace5303/electron-egg/releases/download/v2.4.0/java-res.zip) 
+- 请根据你的操作系统，选择正确的 `jre` 并解压
+
+2. 将`jre`解压到 `build/extraResources` 目录
+
+备注：官方`jre`下载地址：[Oracle java](https://www.oracle.com/java/technologies/javase/javase8-archive-downloads.html)
+
+### 运行
 ```bash
 npm run start
 ```
