--- a/docs/01.v3/020.基础功能/081.dll使用.md
+++ b/docs/01.v3/020.基础功能/081.dll使用.md
@@ -15,6 +15,8 @@ Dll文件是动态链接库，桌面软件中经常需要使用。
 2. 32位的 `dll` 必须在 32位`node`、 32位`electron` 上调用
 :::
 
+该内容不再更新，推荐使用 `koffi` https://koffi.dev/
+
 ### 准备环境
 ```bash
 # 编译工具
