--- a/docs/01.v3/040.升级/010.框架升级.md
+++ b/docs/01.v3/040.升级/010.框架升级.md
@@ -33,9 +33,9 @@ npm install electron@16.13.0 --save-dev
 ### Window 7 系统
 微软已经停止对 win7系统支持。需要支持win7的，请使用以下开发环境：
 
-- electron <= 12
-- node.js <= 12
-- electron-builder <= 22.10.5
+- electron <= 22版本
+- node.js <= 16版本
+- electron-builder <= 23.6.0
 
 ### 慎重选择electron的新版本
 请尽量使用框架提供的版本。electron版本迭代较快，新版本bug较多，非资深开发者或大型公司，请勿使用。
