--- a/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/02.开发配置.md
@@ -42,7 +42,7 @@ module.exports = {
       hostname: 'localhost',   // hostname
       port: 8080,              // port
       indexPath: 'index.html'  // 'file://'协议时有效，入口文件
-      force: true,             // 强制加载前端服务
+      force: false,            // 强制加载前端服务
     },
     // electron：主进程服务
     // 说明：该配置的意思是，在根目录，执行 electron . --env=local
