--- a/docs/01.v3/045.跨语言支持/020.go/01.开始.md
+++ b/docs/01.v3/045.跨语言支持/020.go/01.开始.md
@@ -77,7 +77,7 @@ async createGoServer() {
   // method 2: Use custom configuration
   const serviceName = "go";
   const opt = {
-    // 程序进程名称，一般填写可执行程序名
+    // 程序名称，一般填写可执行程序名
     name: 'goapp',
     cmd: path.join(Ps.getExtraResourcesDir(), 'goapp'),
     directory: Ps.getExtraResourcesDir(),
