--- a/docs/01.v3/045.跨语言支持/030.java/02.业务.md
+++ b/docs/01.v3/045.跨语言支持/030.java/02.业务.md
@@ -14,7 +14,7 @@ permalink: /pages/8934ea/
 请查看文档：[**API**](/pages/74c87a/)
 
 #### 创建服务
-创建服务非常简单，参加下方代码。
+创建服务非常简单，参见下方代码。
 
 ```javascript
   // 文件 electron/service/cross.js
@@ -28,7 +28,7 @@ permalink: /pages/8934ea/
     // jar包路径，getExtraResourcesDir方法会自动处理打包前和打包后路径。
     const jarPath = path.join(Ps.getExtraResourcesDir(), 'java-app.jar');
     const opt = {
-      // 程序进程名称
+      // 程序名称
       name: 'javaapp',
       // 可执行程序路径，或本机的可执行命令
       cmd: path.join(Ps.getExtraResourcesDir(), 'jre1.8.0_201/bin/javaw.exe'),
@@ -54,7 +54,7 @@ permalink: /pages/8934ea/
     // 程序option配置
     Log.info('server config:', entity.config);
     // 程序服务地址
-    Log.info('server url:', Cross.getUrl(entity.name));
+    Log.info('server url:', entity.getUrl());
 
     return;
   }
