--- a/docs/04.其它/023.案例go.md
+++ b/docs/04.其它/023.案例go.md
@@ -15,6 +15,8 @@ permalink: /pages/c00a0c/
 ###  mayfly-go  - [官网](https://github.com/dromara/mayfly-go)
 linux(终端[终端回放] 文件 脚本 进程 计划任务)、数据库（mysql postgres oracle 达梦 高斯 sqlite）、redis(单机 哨兵 集群)、mongo 统一管理操作平台
 
+登录账号：`admin` 密码：`admin123.`
+
 [开源项目地址](https://github.com/dromara/mayfly-go)
 
 [客户端地址](https://github.com/wallace5303/mayfly-desktop)
