--- a/docs/01.v3/045.跨语言支持/020.go/01.开始.md
+++ b/docs/01.v3/045.跨语言支持/020.go/01.开始.md
@@ -9,6 +9,8 @@ permalink: /pages/cf2ad4/
 
 > ee-core: v2.8.2
 
+> go 1.20.4
+
 `go` 凭借着简单、高效、跨平台等优势，迅速成为开发者最喜爱的语言之一。
 
 `electron-egg` 深度集成了go，并通过 `ee-go` mod，让开发者非常方便的进程业务开发，而无需关注复杂的系统环境。
@@ -18,7 +20,8 @@ permalink: /pages/cf2ad4/
 > 注：为了简化开发，请升级ee-core >= 2.8.2
 
 ### 准备
-- 推荐 go >= 1.20.4 
+- 推荐 go 1.20.4 
+- 注：go 1.20 是支持win7、macOS 10.x 的最后一个版本
 
 ### 下载安装
 1. 下载项目
