--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -10,19 +10,24 @@ article: false
 这里总结了开发时遇到的常见问题，方便开发者快速找到解决方案。
 
 如果没有找到，还可以查查issue
+
 - [gitee issue](https://gitee.com/dromara/electron-egg/issues)
 - [github issue](https://github.com/dromara/electron-egg/issues)
 
-###  1：打包时，下载资源超时：
-```
+### 1：打包时，下载资源超时
+
+```bash
 # 使用国内源，参见 安装 或 生成软件 教程
 ```
-###  2：打包失败（异常）
+
+### 2：打包失败（异常）
+
 ```bash
 错误1：python 。。。。。
 解决：升级构建包，npm install electron-builder@23.0.6
 ```
-```
+
+```bash
 错误2：打包报错Fatal error: Unable to commit changes
 原因：
 1. 磁盘是不是满了 ，这个坑也困扰了我半个小时，虽然不长，但是是低级错误
@@ -33,28 +38,46 @@ article: false
 2. 退出杀毒软件
 3. https://www.azimiao.com/6250.html
 ```
+
 ```bash
 错误3：...resource\app.asar does not exist ...
 解决：electron-egg/目录中，如果有app目录，则该目录必须是个普通文件目录，不能为项目目录，
 比如，app/目录内，不能有 .git、 package.json、node_modules等文件。
 ```
+
 ```bash
 错误4：...Need executable 'ar' to convert dir to deb
 原因：fpm 工具需要 ar 命令才能打包deb, 安装binutils
 解决：sudo apt install binutils
 ```
+
 ```bash
 错误5：...Cannot find module 'fs/promises'
 原因：electron-builder包版本太高，一些语法不兼容
 解决：降低electron-builder版本，重新安装包：electron-builder <= 22.10.5
 ```
+
 ```bash
 错误6：...ERR! better-sqlite@7.6.2 install ...
 原因：sqlite需要更高版本的node.js
 解决：更新node.js >= 14.21.1
 ```
 
-###  3：打包后，运行闪退 或 报错
+```bash
+错误7：... errorOUt=/home/hzx/.cache/electron-builder/fpm/fpm-1.9.3-2.3.1-linux-x86/lib/ruby/bin/ruby ...
+原因：fpm没有相匹配的arm包，所以会去下载仓库中有的包！
+解决：本地安装ruby并配置中国数据源，重新下载fpm包，最后使用软连接的方式链接fpm，重新执行打包命令该问题可解决）
+sudo apt-get install ruby-full
+gem sources --add https://gems.ruby-china.com/ --remove https://rubygems.org/
+gem sources -l
+sudo gem install fpm
+cd ~/.cache/electron-builder/fpm/fpm-1.9.3-2.3.1-linux-X86_64/ #版本有可能不同，根据实际情况更改
+rm -rf fpm
+ln -s /usr/local/bin/fpm fpm
+```
+
+### 3：打包后，运行闪退 或 报错
+
 > 闪退
 
 ```bash
@@ -64,6 +87,7 @@ article: false
 如：d:/soft/electron-egg.exe   按“回车”
 
 ```
+
 > 报错1：代码被过滤
 
 ```javascript
@@ -81,6 +105,7 @@ at Object.Module._extensions..js (internal/modules/cjs/loader.js:1108:10)
 at Module.load (internal/modules/cjs/loader.js:935:32) 
 at Modulejoad (internal/modules/cjs/loader.js:776:14) 
 ```
+
 提示： ./app.asar/electron not exits
 
 原因：未使用加密功能，但是把源码过滤了，导致找不到代码。
@@ -104,6 +129,7 @@ at new EeApp(C\Program Files ee resources app.asarnode modules ee-core ib eeApp.
 at new Appliaction(C:\Program Fileslee resources app.asar node modules ee-core lib\applicationjs:67:5)
 at new Main(C:\Program Files eeresources app.asarmain.js:6:5)
 ```
+
 显示 TypeError Class constructor ExampleService cannot be invoked withou 'new' at ......
 
 原因：每个加密的class文件，需要添加 **toString()** 方法
@@ -153,21 +179,26 @@ Require stack:
 ```
 
 > 报错6：模块未找到
+
 ```javascript
 Uncaught Exception:
 Error Cannot find module 'semver'
 - xxx ....../resources/app.asar/.../index.js
 ```
+
 原因：使用了非官方的包管理，如：yarn cnpm等
 
 解决方案：
 请使用npm
 
-###  4：cmd控制台乱码
+### 4：cmd控制台乱码
+
 参照：[中文乱码](https://cloud.tencent.com/developer/article/1835811)
 
-###  5：npm包缺失或异常
+### 5：npm包缺失或异常
+
 安装异常时，删掉node_modules和package-lock文件
+
 ```bash
 # 1、如：cannot find module 'debug'
 
@@ -181,8 +212,10 @@ Error Cannot find module 'semver'
 # 备注
 包问题，都用npm安装，不要用cnpm、pnpm、yarn
 ```
-###  6：白屏、api 404、跨越问题
-```
+
+### 6：白屏、api 404、跨越问题
+
+```bash
 # dev模式白屏
 问题1：先启动前端服务，再启动桌面服务，请查看文档中开发步骤
 
@@ -201,10 +234,13 @@ Error Cannot find module 'semver'
 用环境变量代替。
 2：设置config.default.json中的windowsOption.webPreferences.webSecurity=true
 ```
+
 [知识点：为什么不能使用代理？](https://blog.csdn.net/qq_52126119/article/details/127895336)
 
-###  7：安装 better-sqlite3 失败
+### 7：安装 better-sqlite3 失败
+
 不同node.js版本，对应的better-sqlite3版本也不尽相同。请尝试 npm i better-sqlite3@7.6.0
+
 ```bash
 # error 1
 ......
@@ -228,6 +264,7 @@ alias python='/usr/local/bin/python3'
 export PATH="/usr/local/opt/python@3.9/libexec/bin:$PATH"
 3. source ~/.zshrc
 ```
+
 ```bash
 # error 2
 ......
@@ -248,6 +285,7 @@ gyp ERR! cwd D:\www\xing\oschina-desktop\node_modules\better-sqlite3
 # 解决方案
 执行命令：npm i node-gyp -g
 ```
+
 ```bash
 # 错误3
 ......
@@ -263,6 +301,7 @@ sqlite包是用c\c++写的，下载的可执行程序可能与你的操作系统
 # 解决方案
 执行命令：npm run re-sqlite
 ```
+
 ```bash
 # 错误4
 ......
@@ -277,20 +316,24 @@ Error: ...BuildTools\MSBuild\15.0\Bin\...
 # 解决方案
 执行命令：npm --vs2015 i -g --production windows-build-tools
 ```
+
 ```bash
 # 其它错误
 查看 better-sqlite3 文档（Troubleshooting installation）
 https://github.com/WiseLibs/better-sqlite3/blob/2194095aa1183e9c21d28eafadeac0d4d4d42625/docs/troubleshooting.md
 
 ```
-###  8：在浏览器中打开vue启动的服务地址（http://localhost:8080）报错
-```
+
+### 8：在浏览器中打开vue启动的服务地址（http://localhost:8080）报错
+
+```bash
 错误：Uncaught TypeError: window.require is not a function......
 原因：vue项目中有个demo功能需要访问electron模块，在普通浏览器中是不能解析的。
 处理：尽量在electron启动的窗口中调试前端页面吧。
 ```
 
-###  10：node module版本不匹配
+### 10：node module版本不匹配
+
 ```bash
 # 错误
 ......
@@ -299,21 +342,24 @@ NODE_MODULE_VERSION 83. This version of Node.js requires
 NODE_MODULE_VERSION 89. Please try re-compiling or re-installing
 ......
 
-
 # 原因
 一些npm包是用c\c++等其它语言写的，下载的可执行程序可能与你的操作系统不一致，因此需要根据源代码重新构建。
 
 # 解决方案
 electron-rebuild -f -w 模块名
 ```
-###  11：macOS系统下，自动更新失败
-```
+
+### 11：macOS系统下，自动更新失败
+
+```bash
 // 尝试关闭asar功能
 1. 检查确认苹果签名账号
 2. 修改package.json中，build对象asar属性值为false
 3. 使用代码加密功能，以防源码暴露
 ```
-###  12：软件黑屏或者卡死
+
+### 12：软件黑屏或者卡死
+
 ```javascript
 错误： ... ERROR:gpu_memory_buffer_support_x11.cc......
 原因：win7或者Linux系统，不支持gpu加速
@@ -326,11 +372,13 @@ if (isWin7 || isLinux) {
 }
 ```
 
-###  14：代码不生效
+### 14：代码不生效
+
 如果执行过加密，则会生成加密代码：/public/electron ，框架优先读取它，源代码则不生效。
 如果发现编写的代码不生效，请记得删除加密代码文件。
 
-###  15：无法识别的class
+### 15：无法识别的class
+
 ```javascript
 A JavaScript error occurred in the main process
 Uncaught Exception:
@@ -346,6 +394,7 @@ at Object.<anonymous:(C:}Usersv Administrator\Deskto p ctron areatoo web client\
 at Module.compile(internal/modules/cjs/oaderjs:1078:30)
 at Object.Module extensions.js(interna l/modules/cjs/loaderjs:1108:10)
 ```
+
 ```javascript
 旧的ee-core包提供的api，单词拼写有误 Application
 const { Appliaction } = require('ee-core');
@@ -362,8 +411,10 @@ EE.app = new Main();
 ```
 
 ### 16：无法使用某些 electron 的api
+
 electron的一些api有引入顺序要求，请将它们放在合适的位置。
 比如：
+
 ```javascript
 2023-05-11 18:31:01,546 ERROR 77836 nodejs.unhandledExceptionError: [ee-core] load file:  
 error: Cannot create BrowserWindow before app is ready
@@ -380,6 +431,7 @@ error: Cannot create BrowserWindow before app is ready
 ```
 
 解决方案：
+
 ```javascript
 # 不要直接导出模块中某个对象，因为项目启动时，框架源码可能并没有加载完。
 
@@ -393,9 +445,11 @@ const Log = require('ee-core/log');
 ```
 
 ### 17：双击exe无反应
+
 代码被过滤，请仔细阅读：[构建文档](/pages/ad838d/)
 
 ### 18：双击exe报错
+
 ```javascript
 D:\test\electron\electron-egg\out\win-unpacked>
 D:\test\electron\electron-egg\out\win-unpacked\resources\app.asar\node_modules\ee-core\log\logger.js:38
@@ -409,7 +463,8 @@ at process. (D:\test\electron\electron-egg\out\win-unpacked\resources\app.asar\n
 at process.emit (events.js:327:22)
 at process._fatalException (internal/process/execution.js:163:25)
 ```
-```
+
+```bash
 # 情况一
 # 这种是临时文件，无法使用，忽略它。
 临时文件：out/win-unpacked
@@ -419,13 +474,16 @@ at process._fatalException (internal/process/execution.js:163:25)
 ```
 
 ### 19：运行rd，encrypt ，clean命令时报错
+
 ```javascript
 env: node\r: No such file or directory
 error Command failed with exit code 127.
 ```
+
 原因：windows系统的换行回车是CRLF，类unix系统下是LF
 
 解决方案：
+
 ```javascript
 // 用vs code打开把行尾序列由CRLF改成LF就可以了
 node_modules/ee-bin/index.js
@@ -433,14 +491,17 @@ node_modules/ee-core/bin/tools.js
 ```
 
 ### 20：encrypt 命令时报错
+
 ```javascript
 error Cannot find module 'node:assert/strict'
 - xxx ....../electron-egg/node_modules/bytenode/lib/index.js
 - xxx ....../electron-egg/node_modules/ee-bin/tools/encrytp.js
 ```
+
 原因：bytenode 模块的bug
 
 解决方案：
+
 ```javascript
 // 安装一个指定版本 v1.3.6
 npm uninstall bytenode
@@ -448,12 +509,15 @@ npm install bytenode@1.3.6
 ```
 
 ### 21：忽略ssl证书错误
+
 ```javascript
 ERROR:ssl_client_impl.cc(983) handshake failed; returned -1, SSL error code 1, net_error
 ```
+
 原因：开发者可能加载了不安全的地址
 
 解决方案：
+
 ```javascript
 // 生命周期文件 electron/index.js
 const {app: electronApp} = require("electron");
@@ -462,3 +526,4 @@ const {app: electronApp} = require("electron");
     electronApp.commandLine.appendSwitch('ignore-certificate-errors');
   }
 ```
+
