--- a/docs/01.v3/045.跨语言支持/020.go/01.开始.md
+++ b/docs/01.v3/045.跨语言支持/020.go/01.开始.md
@@ -52,21 +52,14 @@ cd ../go
 go mod tidy
 ```
 
-### 运行
+### 在electron中如何运行go项目
+
 提供两种启动方式。1：通过配置启动；2：通过cross模块的API来启动。
 
 #### 方式一：配置模式
 请查看文档：[**配置**](/pages/9fd5ba/)
 
-执行命令
-```bash
-# 直接启动
-npm run dev
-
-# 分开启动 前端、主进程
-npm run dev-frontend
-npm run dev-electron
-```
+执行命令`npm run dev-electron`时，会自动拉起go项目/程序。
 
 #### 方式二：API模式
 创建go服务
@@ -120,10 +113,3 @@ module.exports = async () => {
   Services.get('cross').createGoServer();
 }
 ```
-
-
-
-
-
-
-
