--- a/docs/01.v3/050.更新记录.md
+++ b/docs/01.v3/050.更新记录.md
@@ -6,6 +6,19 @@ article: false
 ---
 
 # 更新记录
+
+### 3.10.0 
+1. 【增加】ee-core、ee-bin 支持python。
+2. 【增加】demo分支增加python使用示例，包含flask/fastapi。
+3. 【增加】ee-bin exec命令，增加stdio参数。
+4. 【增加】ee-bin dev命令增加force属性。
+5. 【增加】ee-core utils模块，新增API: fileIsExist()。
+6. 【增加】ee-core 新增 html模块。
+7. 【增加】ee-core socket模块，增加sockerServer增加socket属性。
+8. 【增加】ee-core cross模块，cmdPath优化、增加stdio参数。
+9. 【修改】demo分支增加左键单击的时候能够显示主窗口、开启webgl、 关闭同源策略
+10. 【升级】升级 ee-bin v1.5.0、ee-core v2.9.2。
+
 ### 3.10.0 
 1. 【优化】优化 ee-core 模块，支持go、java等。
 2. 【增加】新增 ee-core cross模块API：run()\killAll()\kill(pid)\killByName(name)\getUrl(name)\getProcByName(name)\getProc(pid)getPids()。
