--- a/docs/03.api/003.ee-core/095.socket.md
+++ b/docs/03.api/003.ee-core/095.socket.md
@@ -72,6 +72,17 @@ io.to(room)
 io.use(fn)
 ```
 
+#### SocketServer.connec()
+
+创建`connection`连接，并监听channel频道`c1`，实现渲染进程与主进程controller的通信。
+
+#### SocketServer.socket
+
+通过SocketServer.io('connection') 建立连接后的 `socket` 对象,
+文档：`https://socket.io/docs/v4/server-api#socket`
+
+可以调用该对象的上的属性/方法，来扩展功能。
+
 ###  getHttpServer()
 获取httpServer实例对象。
 ```javascript
