--- a/docs/03.api/003.ee-core/111.utils-helper.md
+++ b/docs/03.api/003.ee-core/111.utils-helper.md
@@ -63,8 +63,20 @@ const UtilsHelper = require('ee-core/utils/helper');
 
 给定的参数是否为有效值，即：非 undefined / null / ''
 
+### fileIsExist(filepath)
+> ee-core：v2.9.2
 
+- filepath [String]
 
- 
+检查文件是否存在
+
+### getValueFromArgv(argv, key)
+> ee-core：v2.9.2
+
+- argv [Array]
+- key [String]
+
+格式化argv数组为对象，并获取指定key的值
+
 
 
