--- a/docs/01.v3/010.快速入门/010.简介.md
+++ b/docs/01.v3/010.快速入门/010.简介.md
@@ -29,7 +29,7 @@ article: false
 ### 值得信赖
 框架已经广泛应用于记账、政务、企业、医疗、学校、股票交易、ERP、娱乐、视频等领域客户端，请放心使用！
 
-![GVP](/img/electron-egg/ee-zs.png)
+![GVP](https://wallace5303.gitee.io/ee/images/electron-egg/ee-zs.png)
 
 ### 愿景
 
@@ -51,15 +51,15 @@ article: false
 支持Windows、MacOS、Linux操作系统；并提供demo，方便开发者快速入门。
 
 #### Windows - demo
-![GVP](/img/electron-egg/win-file.png)
+![GVP](https://wallace5303.gitee.io/ee/images/ee-v3/ee-win-home.png)
 
 #### MacOS - demo
-![GVP](/img/electron-egg/mac-socket.png)
+![GVP](https://wallace5303.gitee.io/ee/images/ee-v3/ee-mac-home.png)
 
 #### Linux - demo - 国产UOS、Deepin
-![GVP](/img/electron-egg/uos-home.png)
+![GVP](https://wallace5303.gitee.io/ee/images/electron-egg/uos-home.png)
 
 #### Linux - demo - ubuntu
-![GVP](/img/electron-egg/ubuntu-db.png)
+![GVP](https://wallace5303.gitee.io/ee/images/electron-egg/ubuntu-db.png)
 
 
