--- a/docs/03.api/003.ee-core/085.ps.md
+++ b/docs/03.api/003.ee-core/085.ps.md
@@ -72,13 +72,13 @@ dev环境：项目根目录，prod环境：app.asar目录
 获取 额外资源目录
 
 ### getAppUserDataDir()
-获取 应用程序数据目录 (开发环境时，为项目根目录)
+获取 应用程序数据目录 
 
 ### getExecDir()
 获取 exec目录，APP安装后，可执行程序（exe、dmg、dep）的根目录
 
 ### getStorageDir()
-获取数据存储路径
+获取数据存储路径 (dev: `项目/data` 目录，prod: 系统中软件数据目录，如`C:\Users\Administrator\AppData\Roaming\软件名(如：ee)\data` )
 
 ### getUserHomeDir()
 获取操作系统用户目录
